--- a/src/styles/NavBar.module.scss
+++ b/src/styles/NavBar.module.scss
@@ -10,7 +10,8 @@
 
   .logo {
     // padding: 1.5rem;
-    margin: 1rem 0rem 0rem 1rem;
+    padding: 1rem;
+    // margin: 1rem 0rem 0rem 1rem;
     flex-grow: 0.5;
   }
 
@@ -93,6 +94,8 @@
     }
     .logo {
       flex-grow: 0;
+      margin: 1rem 0rem 0rem 1rem;
+      padding: 0;
     }
 
     .desktop {
